11/28/2006
	- 2.0.3 released

11/27/2006
	- The Zone.fromXFR() method should be able to create zones
	  from AXFR-style IXFR responses.
	  (Bill Kuker <bkuker@users.sourceforge.net>)

10/25/2006
	- Make the routines that convert between the DNS and standard Java
	  representations of DSA signatures public.
	  (suggested by Klaus Malorny <Klaus.Malorny@knipp.de>)

8/3/2006
	- Add a TSIG constructor that takes an algorithm as a String.
	- Add support to TSIG.fromString() for specifying an algorithm.

7/30/2006
	- When converting a PublicKey to a DNS record, allow the algorithm
	  to be specified, as RSA keys can be either of the RSA-SHA1 or
	  RSA-MD5 algorithms (based on a patch from
	  Eric <ginipginob@users.sourceforge.net>)
	- When converting a PublicKey to a DNS record, allow the type (KEY
	  or DNSKEY) to be specified.
	- Update the DNSSECVerifier code to use DNSKEY records, not KEY
	  records.

7/30/2006
	- Added support for parsing the output of ipconfig in French .
	  (Frederic Bazin <fbazin@users sourceforge.net>)

7/30/2006
	- If both "search" and "domain" lines are present in a resolv.conf
	  file, the domain line should be ignored.

7/26/2006
	- Add support for the SPF record type.

7/21/2006
	- DNSSEC.digestRRset could digest records in the wrong order.
	  (reported by David Blacka <davidb@verisignlabs.com> and
	   Mahendra Jain <Majain@verisign.com>)

6/26/2006
	- 2.0.2 released.

6/22/2006
	- Add support for the IPSECKEY record type.

5/18/2006
	- The result of a Lookup that involves a CNAME should include
	  the queried name as one of the aliases, not the CNAME target.
	  (Jon Lachelt <jon.lachelt@hp.com>)

2/13/2006
	- Loading zones containing RRsets with multiple records didn't work.
	  (reported by Olafur Gudmundsson" <ogud@ogud.com>)

1/24/2006
	- AXFR requests could leak file descriptors if the connection
	  failed. (Can Bican <can@bican.net>)

11/30/2005
	- Add a Resolver.setTimeout(int secs, int msecs) method.